--- a/wp-content/themes/twentyfifteen/css/flexslider.css
+++ b/wp-content/themes/twentyfifteen/css/flexslider.css
@@ -41,7 +41,9 @@
 .flexslider .slides img {width: 100%; display: block;}
 .flexslider .slides .slide-text {position: relative;}
 .flexslider .slides .slide-text p {margin-bottom: 0px;}
-.flexslider .slides .block-text {position: absolute; bottom: 0px; left: 0px; right: 0px; padding: 2em; background-color: rgba(0,0,0,0.8); color: #fff;}
+.flexslider .slides .block-text {position: absolute; bottom: 0px; left: 0px; right: 0px; padding: 2em; background-color: rgba(0,0,0,0.8); color: #fff; text-align: center;}
+.flexslider .slides .block-text h2 {font-size: 33px; line-height: 40px;}
+.flexslider .slides .block-text p {font-size: 15px; font-weight: 400; color: #cfcfcf;}
 .flex-pauseplay span {text-transform: capitalize;}
 
 /* Clearfix for the .slides element */
@@ -56,7 +58,7 @@ html[xmlns] .slides {display: block;}
 
 /* FlexSlider Default Theme
 *********************************/
-.flexslider { margin: 0 0 60px; background: #fff; border: 4px solid #fff; position: relative; -webkit-border-radius: 4px; -moz-border-radius: 4px; -o-border-radius: 4px; border-radius: 4px; -webkit-box-shadow: 0 1px 4px rgba(0,0,0,.2); -moz-box-shadow: 0 1px 4px rgba(0,0,0,.2); -o-box-shadow: 0 1px 4px rgba(0,0,0,.2); box-shadow: 0 1px 4px rgba(0,0,0,.2); zoom: 1; }
+.flexslider { margin: 20px 0px; background: #fff; position: relative; zoom: 1; }
 .flex-viewport { max-height: 2000px; -webkit-transition: all 1s ease; -moz-transition: all 1s ease; -o-transition: all 1s ease; transition: all 1s ease; }
 .loading .flex-viewport { max-height: 300px; }
 .flexslider .slides { zoom: 1; }
@@ -71,8 +73,8 @@ html[xmlns] .slides {display: block;}
 .flexslider:hover .flex-next { opacity: 0.7; right: 10px; }
 .flexslider:hover .flex-next:hover, .flexslider:hover .flex-prev:hover { opacity: 1; }
 .flex-direction-nav .flex-disabled { opacity: 0!important; filter:alpha(opacity=0); cursor: default; }
-.flex-direction-nav a:before  { font-family: "flexslider-icon"; font-size: 40px; display: inline-block; content: '\f001'; }
-.flex-direction-nav a.flex-next:before  { content: '\f002'; }
+.flex-direction-nav a:before  { background-image: url('../img/arrow-left.png'); width: 24px; height: 44px; display: inline-block; content: ''; }
+.flex-direction-nav a.flex-next:before  { background-image: url('../img/arrow-right.png'); width: 24px; height: 44px; content: ''; }
 
 /* Pause/Play */
 .flex-pauseplay a { display: block; width: 20px; height: 20px; position: absolute; bottom: 5px; left: 10px; opacity: 0.8; z-index: 10; overflow: hidden; cursor: pointer; color: #000; }
@@ -81,7 +83,7 @@ html[xmlns] .slides {display: block;}
 .flex-pauseplay a.flex-play:before { content: '\f003'; }
 
 /* Control Nav */
-.flex-control-nav {width: 100%; position: absolute; bottom: -40px; text-align: center;}
+.flex-control-nav {width: 100%; position: absolute; bottom: -40px; text-align: center; display: none;}
 .flex-control-nav li {margin: 0 6px; display: inline-block; zoom: 1; *display: inline;}
 .flex-control-paging li a {width: 11px; height: 11px; display: block; background: #666; background: rgba(0,0,0,0.5); cursor: pointer; text-indent: -9999px; -webkit-border-radius: 20px; -moz-border-radius: 20px; -o-border-radius: 20px; border-radius: 20px; -webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.3); -moz-box-shadow: inset 0 0 3px rgba(0,0,0,0.3); -o-box-shadow: inset 0 0 3px rgba(0,0,0,0.3); box-shadow: inset 0 0 3px rgba(0,0,0,0.3); }
 .flex-control-paging li a:hover { background: #333; background: rgba(0,0,0,0.7); }
